<resources>
    <string name="app_name">lat3</string>
    <string name="todo">TODO</string>
    <string name="heading">HEADING</string>
    <string name="desc">Desc</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="home">home</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="profil">Profil</string>
    <string name="nav_home">home</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_gallery">Gallery</string>
    <string name="finish">Finish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="ha">Hafizh Apps</string>
    <string name="interest">Interest</string>
    <string name="mn">Menu</string>
    <string name="kembali">Kembali</string>
    <string name="mhb">Muhammad Hafizh Budiman</string>
    <string name="inorma">Informatic\'16</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="deskripsi1">Saya <b>Muhammad Hafizh Budiman</b> adalah seorang Mahasiswa yang lahir di kota Sukabumi pada tahun 1998, yang saat ini sedang mencari ilmu disebuah Universitas Komputer Indonesia(UNIKOM).</string>
    <string name="hobby1">Saya Memiliki Hobby memodifikasi Kendaraan Roda Dua maupun Roda Empat, dan saya juga sangat hobby bermain Game Online, Seperti:</string>
    <string name="steam"><b>Steam</b> : Dota 2, CSGO, dan GTA V.</string>
    <string name="Garena"><b>Garena</b> : PointBlank dan Lost Saga.</string>
    <string name="interest1"><b>Interest</b> : Saya lebih suka mendalami dalam dunia IT untuk saat ini, agar skripsi bisa dilakukan dengan baik dan benar.</string>
    <string name="makes">Makanan Kesukaan Saya Pribadi adalah Ayam goreng atau Bakar, dan saya lebih menyukai masakan pinggir jalan. Sedangkan untuk Minuman sendiri saya lebih menyukai Teh atau Kopi dan berbau Milkshake.</string>
    <string name="cita"><b>Cita Cita</b> : Saya memiliki Cita cita yang pertama adalah Membahagiakan Orang Tua dengan melakukan apapun yang mereka mau. \n Kedua adalah setelah saya lulus saya tidak akan berkerja disebuah perusahaan karena Bapak saya mengajarkan saya untuk menjadi atasan bukan bawahan, yaitu dengan menjadi Pengusaha.</string>
    <string name="makes_dan_mikes">Makes dan Mikes</string>
    <string name="cita_cita">Cita - Cita</string>
    <string name="mf">Music Favorite</string>
    <string name="vf">Video Favorite</string>
    <string name="she_s_gone_steal_heart_offical_video">She\'s Gone - Steal Heart (Offical Video)</string>
    <string name="video_favorite">Video Favorite</string>
    <string name="jump_van_halen_offical_video">Jump - Van Halen (Offical Video)</string>
    <string name="about">About</string>
    <string name="find_me">Find Me</string>
    <string name="contact_me">Contact Me</string>
    <string name="anda_bisa_melihat_nomor_saya_ketika_anda_mengklik_gambar_disamping">Anda bisa melihat Nomor saya ketika anda mengklik gambar disamping.</string>
    <string name="anda_bisa_mengirim_email_pribadi_saya_dengan_mengklik_gambar_disamping">Anda bisa mengirim Email Pribadi saya dengan mengklik gambar disamping.</string>
    <string name="dibawah_ini_merupakan_sosial_media_yang_saya_gunakan_caranya_cukup_mudah_hanya_dengan_mengklik_gambar_untuk_melihatnya">Dibawah ini merupakan Sosial Media yang saya gunakan, caranya cukup mudah hanya dengan mengklik gambar untuk melihatnya.</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="social_club">Social Club</string>
    <string name="title_activity_maps">Map</string>
    <string name="oke">Oke</string>
    <string name="about_version_application">About Version Application</string>
    <string name="your_name">Your name</string>
    <string name="hobby">Hobby</string>
    <string name="find_me_at_maps">Find Me At Maps!</string>
    <string name="find_mee">Find Me!</string>
    <string name="music_favorite">Music Favorite</string>
    <string name="tentang_aplikasi_ini">Tentang Aplikasi Ini!</string>
    <string name="about_hafizh_apps">About Hafizh Apps</string>
    <string name="aplikasi_v0_1_0">Aplikasi V0.1.0</string>
    <string name="gallery">Gallery</string>
    <string name="stance_car">Stance Car</string>
    <string name="logo_band">Logo Band</string>
    <string name="friends_list">Friends List</string>
    <string name="daily_activity1">Daily Activity</string>
    <string name="friend_list">Friend List</string>
    <string name="aplikasi_v_0_0_4">Aplikasi V 0.0.4</string>
</resources>
