<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/da"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_da"
        android:icon="@drawable/da"
        android:title="@string/daily_activity" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/galery"
        android:title="@string/nav_gallery" />
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/music"
        android:title="@string/music" />
    <item
        android:id="@+id/nav_profil"
        android:icon="@drawable/profill"
        android:title="@string/profil"/>
</menu>