<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainn"
    tools:context=".InterestFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="149dp"
        android:gravity="center"
        android:text="@string/makes_dan_mikes"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="256dp"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
android:id="@+id/button"
android:layout_width="40dp"
android:layout_height="wrap_content"
android:layout_alignParentEnd="true"
android:layout_alignParentBottom="true"
android:layout_marginEnd="371dp"
android:layout_marginBottom="688dp"
android:background="@color/tembus"
android:drawableStart="@drawable/ic_header_back"
android:textColor="@color/putih"
android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="78dp"
        android:textColor="@color/putih"
        android:text="@string/hobby1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="118dp"
        android:text="@string/steam"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="139dp"
        android:text="@string/Garena"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="207dp"
        android:text="@string/makes"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:text="@string/interest1"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="351dp"
        android:gravity="center"
        android:text="@string/cita_cita"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="406dp"
        android:text="@string/cita"
        android:textColor="@color/putih" />

</RelativeLayout>
