<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="353dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/heading"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/slide_desc"
        android:layout_width="235dp"
        android:layout_height="182dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="394dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:text="@string/desc"
        android:textColor="@color/putih" />

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="136dp"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/home" />

</RelativeLayout>