<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainn"
    tools:context=".ContactFragment">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="316dp"
        android:layout_marginBottom="194dp"
        android:text="@string/social_club"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/button19"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="314dp"
        android:layout_marginTop="418dp"
        android:background="@drawable/rk" />

    <Button
        android:id="@+id/button18"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="418dp"
        android:background="@drawable/twitter" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginBottom="194dp"
        android:text="@string/twitter"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/button17"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/facebook" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginBottom="193dp"
        android:text="@string/facebook"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/contact_me"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button12"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="371dp"
        android:layout_marginBottom="688dp"
        android:background="@color/tembus"
        android:drawableStart="@drawable/ic_header_back"
        android:textColor="@color/putih"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="115dp"
        android:background="@drawable/call" />

    <Button
        android:id="@+id/button15"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="226dp"
        android:background="@drawable/email" />

    <Button
        android:id="@+id/button16"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/instagram" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="231dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="125dp"
        android:textColor="@color/putih"
        android:text="@string/anda_bisa_melihat_nomor_saya_ketika_anda_mengklik_gambar_disamping" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="231dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="239dp"
        android:text="@string/anda_bisa_mengirim_email_pribadi_saya_dengan_mengklik_gambar_disamping"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:textColor="@color/putih"
        android:layout_marginBottom="338dp"
        android:text="@string/dibawah_ini_merupakan_sosial_media_yang_saya_gunakan_caranya_cukup_mudah_hanya_dengan_mengklik_gambar_untuk_melihatnya" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:textColor="@color/putih"
        android:layout_marginBottom="193dp"
        android:text="@string/instagram" />
</RelativeLayout>