<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainn"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/button4"
        android:layout_width="396dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="98dp"
        android:background="@drawable/tmbll"
        android:drawableEnd="@drawable/knn"
        android:gravity="center"
        android:text="@string/profil"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/button6"
        android:layout_width="396dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/tmbll"
        android:drawableEnd="@drawable/knn"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/mn"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>