<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ssback"
    tools:context=".WalkthroughActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="662dp"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="116dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="86dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/putih"
        android:textColorLink="@android:color/transparent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="87dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:text="@string/next"
        android:textColor="@color/putih"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:text="@string/finish"
        android:onClick="mulai"
        android:textColor="@color/putih"
        android:visibility="invisible"
        tools:ignore="OnClick" />

</RelativeLayout>