<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainn"
    tools:context=".ProfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-688dp"
        android:src="@drawable/fotoprof" />

    <Button
        android:id="@+id/button"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="371dp"
        android:layout_marginBottom="688dp"
        android:background="@color/tembus"
        android:drawableStart="@drawable/ic_header_back"
        android:textColor="@color/putih"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="302dp"
        android:gravity=""
        android:text="@string/mhb"
        android:textColor="@color/putih"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/tmbll"
        android:visibility="visible" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/tmbll"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="319dp"
        android:gravity=""
        android:text="@string/inorma"
        android:textColor="@color/putih"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="338dp"
        android:text="@string/deskripsi1"
        android:textColor="@color/putih" />

</RelativeLayout>